<resources>
    <!-- app and activities/fragments labels -->
    <string name="app_name">DrinkPicker</string>
    <string name="add_drink_bac_activity">Add drink</string>
    <string name="modify_drink_bac_activity">Add drink</string>
    <string name="add_drink_list_activity">Add drink</string>
    <string name="modify_drink_list_activity">Add drink</string>


    <string name="title_discover">Discover</string>
    <string name="title_my_drinks">My Drinks</string>
    <string name="title_blood_alcohol_concentration">BAC</string>


    <!-- BAC -->
    <string name="hint_drink_name">name</string>
    <string name="hint_drink_alcohol_percentage">alcohol percentage (in %)</string>
    <string name="hint_drink_volume">volume (in cl)</string>
    <string name="time_format_string">%02d:%02d</string>


    <!-- menu items -->
    <string name="menu_action_save">Save</string>
    <string name="menu_action_image">Camera/Gallery</string>

    <string name="bac_select_time">Start time of the drink</string>
    <string name="bac_title">Your current blood alcohol concentration is</string>
    <string name="gender_label">Gender</string>
    <string name="gender_male_label">Male</string>
    <string name="gender_female_label">Female</string>
    <string name="weight_label">weight</string>
    <string name="weight_hint">e.g. 63.0kg</string>

    <string name="bac_value">%.5f</string>

    <!-- keys -->
    <string name="key_ismale" translatable="false">isMale</string>
    <string name="key_weight" translatable="false">weight</string>
    <string name="title_settings">Settings</string>
    <string name="add_image">Add image</string>
    <string name="add_location">Add location</string>
    <string name="take_picture">Take picture</string>
    <string name="select_from_gallery">Select from gallery</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_register">Register</string>
    <string name="log_out">Log out</string>
    <string name="hint_location">Location</string>
    <string name="no_drinks_added_label">You have not added any drinks yet</string>
    <string name="error_message_loading_data">Error with retrieving the data</string>
    <string name="key_name">name</string>
    <string name="key_alcohol_percentage">alcoholPercentage</string>
    <string name="key_rating">rating</string>
    <string name="key_imageUris">imageUris</string>
    <string name="key_placeIds">placeIds</string>
    <string name="key_drink_discovery">drink-discovery</string>
    <string name="detail_placesLabel">Places</string>
    <string name="detail_imagesLabel">Images</string>

    <string name="percentage_formatter">%1$.1f%%</string>

</resources>
