<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_discover"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_discover" />

    <item
        android:id="@+id/navigation_my_drinks"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_my_drinks" />

    <item
        android:id="@+id/navigation_blood_alcohol_concentration"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_blood_alcohol_concentration" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/title_settings"/>

</menu>
