<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/left_margin"
    android:paddingStart="@dimen/start_margin"
    android:paddingRight="@dimen/right_padding"
    android:paddingEnd="@dimen/end_padding"
    android:paddingTop="@dimen/top_margin"
    android:paddingBottom="@dimen/bottom_padding"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/gender_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender_label"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/dividerLineGender"
        android:layout_width="0dp"
        android:layout_height="@dimen/divider_height"
        android:background="@color/colorDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_title" />


    <RadioGroup
        android:id="@+id/gender_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerLineGender">

        <RadioButton
            android:id="@+id/radiobutton_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_male_label"
            android:paddingEnd="@dimen/end_padding"
            android:paddingRight="@dimen/right_padding"/>

        <RadioButton
            android:id="@+id/radiobutton_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_female_label" />

    </RadioGroup>


    <TextView
        android:id="@+id/weight_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:text="@string/weight_label"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_group" />

    <View
        android:id="@+id/dividerLineWeight"
        android:layout_width="0dp"
        android:layout_height="@dimen/divider_height"
        android:background="@color/colorDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_title"/>


    <EditText
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dividerLineWeight"
        android:layout_marginTop="@dimen/top_margin"
        android:id="@+id/weight_input"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:hint="e.g. 60.0kg"
        android:inputType="numberDecimal"
        android:background="@null"/>

</android.support.constraint.ConstraintLayout>