<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".AddDrinkBACActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_bac"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:titleTextColor="@color/colorTextIcons"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/bac_name_textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/edit_text_margin"
        app:layout_constraintTop_toBottomOf="@id/toolbar_bac">

        <android.support.design.widget.TextInputEditText
            android:inputType="textCapWords"
            android:id="@+id/bac_name_textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_drink_name"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/bac_alcohol_percentage_textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/edit_text_margin"
        app:layout_constraintTop_toBottomOf="@id/bac_name_textInputLayout">

        <android.support.design.widget.TextInputEditText
            android:inputType="numberDecimal"
            android:id="@+id/bac_alcohol_percentage_textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_drink_alcohol_percentage"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/bac_volume_textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/edit_text_margin"
        app:layout_constraintTop_toBottomOf="@id/bac_alcohol_percentage_textInputLayout">

        <android.support.design.widget.TextInputEditText
            android:inputType="numberDecimal"
            android:id="@+id/bac_volume_textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_drink_volume"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/bac_time_textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/edit_text_margin"
        app:layout_constraintTop_toBottomOf="@id/bac_volume_textInputLayout">

        <android.support.design.widget.TextInputEditText
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:id="@+id/bac_time_textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bac_select_time"/>

    </android.support.design.widget.TextInputLayout>



</android.support.constraint.ConstraintLayout>