<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollview"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".AddDrinkToListActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_list"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            app:titleTextColor="@color/colorTextIcons"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        </android.support.v7.widget.Toolbar>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/list_name_textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edit_text_margin"
            app:layout_constraintTop_toBottomOf="@id/toolbar_list">

            <android.support.design.widget.TextInputEditText
                android:inputType="textCapWords"
                android:id="@+id/list_name_textInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_drink_name"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/list_alcohol_percentage_textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edit_text_margin"
            app:layout_constraintTop_toBottomOf="@id/list_name_textInputLayout">

            <android.support.design.widget.TextInputEditText
                android:inputType="numberDecimal"
                android:id="@+id/list_alcohol_percentage_textInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_drink_alcohol_percentage"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/list_location_textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edit_text_margin"
            app:layout_constraintTop_toBottomOf="@id/list_alcohol_percentage_textInputLayout">

            <android.support.design.widget.TextInputEditText
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:id="@+id/list_location_textInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_location"/>

        </android.support.design.widget.TextInputLayout>

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="0"
            android:stepSize="0.5"
            android:layout_margin="@dimen/ratingbar_margin"
            app:layout_constraintTop_toBottomOf="@id/list_location_textInputLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <RelativeLayout
            android:id="@+id/image_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/ratingBar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/border"
            android:layout_marginTop="@dimen/top_margin">

            <ImageView
                android:id="@+id/placeholder_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_input_add"
                android:tint="@color/colorAccent"
                android:layout_centerInParent="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/placeholder_image"
                android:layout_centerHorizontal="true"
                android:text="@string/add_image"
                android:textColor="@color/colorAccent"/>

            <ImageView
                android:id="@+id/drink_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </RelativeLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>